
fusionforge (5.1.50+svn15228-1) experimental; urgency=low

  * New upstream SVN snapshot from the 5.2 stabilisation branch.

 -- Roland Mas <lolando@debian.org>  Tue, 27 Mar 2012 20:57:28 +0200

fusionforge (5.1.1-9) UNRELEASED; urgency=low

  [ Roland Mas ]
  * Reinstate code running the Mediawiki SQL initialisation code from the
    package's postinst.

  [ Thorsten Glaser ]
  * SECURITY: Upon user deletion, remove their Unix account as well
  * SECURITY: Do not disclose inaccessible groups on user_home/toplist

 -- Thorsten Glaser <tg@mirbsd.de>  Mon, 03 Sep 2012 14:07:16 +0200

fusionforge (5.1.1-8) unstable; urgency=low

  * Fixes from the 5.1 upstream branch.
  * Fixed wrong link for custom homepage, thanks to Olivier Berger for the
    patch (closes: #675090).

 -- Roland Mas <lolando@debian.org>  Fri, 01 Jun 2012 11:04:11 +0200

fusionforge (5.1.1-7) unstable; urgency=low

  * Many fixes from the 5.1 upstream branch.
  * Set up a dpkg trigger to handle Mediawiki upgrades and update the
    database schemas accordingly (closes: #673125).

 -- Roland Mas <lolando@debian.org>  Wed, 23 May 2012 13:54:10 +0200

fusionforge (5.1.1-6) unstable; urgency=low

  * Fixes in search.
  * Use current way to get configuration values instead of looking for the
    old file, thanks to Andreas Beckmann (closes: #668878).

 -- Roland Mas <lolando@debian.org>  Fri, 27 Apr 2012 14:38:52 +0200

fusionforge (5.1.1-5) unstable; urgency=low

  * Remove more config files on purge (detected by piuparts).

 -- Roland Mas <lolando@debian.org>  Tue, 27 Mar 2012 20:34:57 +0200

fusionforge (5.1.1-4) unstable; urgency=low

  * Removed one more call to fusionforge-config.

 -- Roland Mas <lolando@debian.org>  Tue, 20 Mar 2012 17:09:19 +0100

fusionforge (5.1.1-3) unstable; urgency=low

  [ Olivier Berger ]
  * Add new README.Debian for gforge-web-apache2 specifically.

  [ Roland Mas ]
  * Use common/include/env.inc.php rather than www/env.inc.php for offline